Minor bugs done.